# loris-game

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
assets/: game.ls  input.ls  lib.ls  spritetest.ls
assets/images/: Sprite-0001.ase  basic_gun.ase  player_idle.ase
